Some CSS alignment fixes.

--- a/ui/fe/css/main.scss
+++ b/ui/fe/css/main.scss
@@ -23,3 +23,7 @@ html, body, .main_content {
 #wrapper {
   width: 100%;
 }
+
+input.invite-email {
+    margin-top: 5px;
+}
